finished implementing routing endpoint